OK-588【OKBET-UI改版-Android-我的】賽果結算，日期背景顏色與設計稿不符

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -156,4 +156,5 @@
     <color name="color_232C4F_F3F9FF">@color/color_232C4F</color>
     <color name="color_232C4F_F4F4F4">@color/color_232C4F</color>
     <color name="color_FFFFFF_535D76">@color/color_FFFFFF</color>
+    <color name="color_202541_F7F8FC">@color/color_202541</color>
 </resources>
