--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -122,6 +122,7 @@
     <color name="color_515151">#515151</color>
     <color name="color_a3a3a3">#a3a3a3</color>
     <color name="color_232C4F">#232C4F</color>
+    <color name="color_F7F8FC">#F7F8FC</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
@@ -463,5 +464,7 @@
     <color name="color_232C4F_F4F4F4">@color/color_F4F4F4</color>
     <color name="color_FFFFFF_535D76">@color/color_535D76</color>
     <!--意见与反馈-反馈记录-->
+    <!--赛果结算-->
+    <color name="color_202541_F7F8FC">@color/color_F7F8FC</color>
 
 </resources>
