OK-588【OKBET-UI改版-Android-我的】賽果結算，日期背景顏色與設計稿不符

--- a/app/src/main/res/layout/settlement_date_item.xml
+++ b/app/src/main/res/layout/settlement_date_item.xml
@@ -18,6 +18,7 @@
     android:textSize="@dimen/textSize12sp"
     android:paddingStart="3dp"
     android:paddingEnd="3dp"
+    android:textStyle="bold"
     tools:checked="true"
     tools:ignore="SpUsage"
     tools:text="10月20日" />
