--- a/app/src/main/res/drawable/effect_select_date_frame_5dp.xml
+++ b/app/src/main/res/drawable/effect_select_date_frame_5dp.xml
@@ -3,6 +3,7 @@
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
+            <stroke android:color="@color/color_334266_DDE1F4" android:width="1dp"/>
             <solid android:color="@color/color_202541_F7F8FC" />
         </shape>
     </item>
