--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -163,5 +163,18 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+    <TextView
+        android:id="@+id/tv_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_191919_FCFCFC"
+        android:gravity="center"
+        android:paddingVertical="12dp"
+        android:text="@string/no_data"
+        android:textColor="@color/color_909090_666666"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/textSize12sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
