--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -68,11 +68,10 @@
                 app:layout_constraintTop_toBottomOf="@+id/topContainer">
 
                 <ImageView
-                    android:id="@+id/iv_league"
+                    android:id="@+id/iv_country"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_marginEnd="4dp"
-                    android:visibility="gone" />
+                    android:layout_marginEnd="4dp" />
 
                 <TextView
                     android:id="@+id/title_league_name"
