--- a/app/src/main/res/layout/fragment_account_history_next.xml
+++ b/app/src/main/res/layout/fragment_account_history_next.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/color_131932_F0F5FA"
     android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
     tools:context="org.cxct.sportlottery.ui.main.accountHistory.next.AccountHistoryNextFragment"
     tools:ignore="SpUsage">
 
