--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -89,11 +89,11 @@
                     app:layout_constraintTop_toBottomOf="@+id/topContainer">
 
                     <ImageView
-                        android:id="@+id/iv_league"
+                        android:id="@+id/iv_country"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
                         android:layout_marginEnd="4dp"
-                        android:visibility="gone" />
+                        app:svgDrawable="@{matchOdd.categoryIcon}" />
 
                     <TextView
                         android:id="@+id/tv_playName"
