--- a/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
@@ -36,11 +36,11 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/iv_league"
+                android:id="@+id/iv_country"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_marginEnd="4dp"
-                android:visibility="gone" />
+                app:svgDrawable="@{matchOdd.categoryIcon}" />
 
             <TextView
                 android:id="@+id/tv_league_name"
