--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -215,14 +215,15 @@
                         app:layout_constraintTop_toTopOf="@+id/tv_account_balance"
                         tools:ignore="MissingConstraints" />
                     <ImageView
+                        android:layout_margin="@dimen/dp_4"
                         android:id="@+id/iv_deposit_tip"
                         android:src="@drawable/deposit_tips"
-                        android:layout_marginStart="@dimen/margin_5"
+                        android:scaleType="fitXY"
                         app:layout_constraintStart_toEndOf="@+id/tv_funds"
                         app:layout_constraintTop_toTopOf="@+id/tv_funds"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_funds"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"/>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
                 
                     <TextView
                         android:id="@+id/tv_currency_type"
