邀请码可选提示

--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -1125,6 +1125,7 @@
 
                             <TextView
                                 android:id="@+id/tvDuty"
+                                android:autoLink="all"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_4"
