--- a/app/src/main/res/layout/item_main_home_menu.xml
+++ b/app/src/main/res/layout/item_main_home_menu.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_025BE8"
-            android:fontFamily="@font/helvetica"
+            android:fontFamily="@font/din_font"
             android:textStyle="bold"
             android:textSize="30sp"
             tools:text="2290" />
