--- a/app/src/main/res/layout/item_search_result_sport.xml
+++ b/app/src/main/res/layout/item_search_result_sport.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/color_bbbbbb_ffffff">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:gravity="center_vertical"
-        android:background="@color/color_E8EFFD">
+        android:background="@color/color_F2F5FA">
 
         <ImageView
             android:id="@+id/view1"
