--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -441,8 +441,8 @@
 
                         <ImageView
                             android:id="@+id/iv_animation"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
                             android:layout_marginRight="5dp"
                             android:adjustViewBounds="true"
                             android:gravity="center"
