--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
+        android:id="@+id/iv_detail_bg"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -14,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg_sport_detail_banner" />
+        android:src="@drawable/bg_sport_detail_football" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -56,6 +57,8 @@
                     android:id="@+id/tv_game_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:textColor="@color/color_FFFFFF"
                     android:textSize="@dimen/textSize16sp"
                     tools:text="欧洲足球锦标赛2020" />
@@ -103,9 +106,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
                 android:minWidth="60dp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -121,6 +123,7 @@
                         android:id="@+id/tv_match_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:singleLine="true"
                         android:layout_marginRight="5dp"
                         android:textColor="@color/color_99FFFFFF"
                         android:textSize="@dimen/textSize12sp"
@@ -130,6 +133,7 @@
                         android:id="@+id/tv_match_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:singleLine="true"
                         android:text="@string/time_null"
                         android:fontFamily="@font/din_bold"
                         android:textColor="@color/color_99FFFFFF"
@@ -167,7 +171,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
                     <LinearLayout
@@ -189,8 +193,9 @@
                         android:id="@+id/tv_score"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:singleLine="true"
                         android:textColor="@color/color_FFFFFF"
-                        android:textSize="@dimen/textSize26sp"
+                        android:textSize="@dimen/textSize24sp"
                         android:fontFamily="@font/din_font"
                         android:visibility="gone"
                         tools:text="5 - 5"
