--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -1,123 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:background="@color/color_000000">
+    android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/v_statusbar_1"
+    <ImageView
+        android:id="@+id/iv_toolbar_bg"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_25" />
+        android:layout_height="79dp"
+        android:scaleType="fitXY"
+        android:visibility="visible"
+        android:src="@drawable/bg_sport_detail_football" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_toolback"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:padding="7dp"
-            android:src="@drawable/ic_arrow_white"
-            android:layout_marginLeft="10dp" />
+        <View
+            android:id="@+id/v_statusbar_1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_25" />
 
         <LinearLayout
-            android:id="@+id/ll_game_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingVertical="5dp">
+            android:layout_height="@dimen/tool_bar_height"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/iv_toolback"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="7dp"
+                android:src="@drawable/ic_arrow_white"
+                android:layout_marginLeft="10dp" />
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/ll_game_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_marginHorizontal="10dp">
+                android:gravity="center">
 
-                <TextView
-                    android:id="@+id/tv_toolbar_home_name"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_marginRight="@dimen/margin_10"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@color/color_FFFFFF_FFFFFF"
-                    android:textSize="@dimen/textSize16sp"
-                    tools:text="義大利" />
+                    android:layout_marginHorizontal="10dp">
 
-                <TextView
-                    android:id="@+id/tv_toolbar_home_score"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/tv_toolbar_home_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:layout_marginRight="@dimen/margin_10"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textSize="@dimen/textSize16sp"
+                        tools:text="義大利" />
+
+                    <TextView
+                        android:id="@+id/tv_toolbar_home_score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_FFFFFF"
+                        android:textSize="@dimen/textSize20sp"
+                        android:fontFamily="@font/din_font"
+                        android:visibility="gone"
+                        tools:text="5"
+                        tools:visibility="visible" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="15dp"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_toolbar_match_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:textColor="@color/color_99FFFFFF"
+                        android:textSize="@dimen/textSize12sp"
+                        tools:text="下半场" />
+
+                    <TextView
+                        android:id="@+id/tv_toolbar_match_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:text="@string/time_null"
+                        android:fontFamily="@font/din_font"
+                        android:textColor="@color/color_99FFFFFF"
+                        android:textSize="@dimen/textSize12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_FFFFFF"
-                    android:textSize="@dimen/textSize20sp"
-                    android:fontFamily="@font/din_font"
-                    android:visibility="gone"
-                    tools:text="5"
-                    tools:visibility="visible" />
-            </LinearLayout>
+                    android:layout_weight="1"
+                    android:layout_marginHorizontal="10dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tv_toolbar_away_score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_FFFFFF"
+                        android:textSize="@dimen/textSize20sp"
+                        android:fontFamily="@font/din_font"
+                        android:visibility="gone"
+                        tools:text="5"
+                        tools:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/tv_toolbar_top"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_FFFFFF"
-                    android:textSize="@dimen/textSize12sp"
-                    tools:text="下半场" />
-
-                <TextView
-                    android:id="@+id/tv_toolbar_bottom"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/time_null"
-                    android:fontFamily="@font/helvetica"
-                    android:textColor="@color/color_FFFFFF"
-                    android:textSize="@dimen/textSize12sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginHorizontal="10dp">
-
-                <TextView
-                    android:id="@+id/tv_toolbar_away_score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_FFFFFF"
-                    android:textSize="@dimen/textSize20sp"
-                    android:fontFamily="@font/din_font"
-                    android:visibility="gone"
-                    tools:text="5"
-                    tools:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/tv_toolbar_away_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginLeft="@dimen/margin_10"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@color/color_FFFFFF_FFFFFF"
-                    android:textSize="@dimen/textSize16sp"
-                    tools:text="義大利" />
+                    <TextView
+                        android:id="@+id/tv_toolbar_away_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textSize="@dimen/textSize16sp"
+                        tools:text="義大利" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</FrameLayout>
