[Fix] OK-948【OKBET-UI改版-Android-体育赛事】Android端，投注成功后，提示不对

--- a/app/src/main/res/layout/content_parlay_record.xml
+++ b/app/src/main/res/layout/content_parlay_record.xml
@@ -48,7 +48,7 @@
                 android:background="@drawable/bg_square_shape_8dp_green"
                 android:gravity="center"
                 android:paddingHorizontal="10dp"
-                android:text="@string/undone"
+                android:text="@string/bet_info_add_bet_success"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
