--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -152,15 +152,26 @@
 
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="14dp"
                         android:layout_marginEnd="10dp"
-                        android:layout_weight="1"
+
                         android:text="@string/password_setting"
                         android:textColor="@color/color_BBBBBB_333333"
                         android:textSize="@dimen/textSize14sp" />
-
+                    <TextView
+                        android:id="@+id/tv_pass_word"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="6dp"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
+                        android:gravity="end"
+                        android:maxLines="1"
+                        android:textColor="@color/color_939393_999999"
+                        android:textSize="@dimen/textSize12sp"
+                        android:text="@string/reset_password" />
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
