--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -179,7 +179,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/margin_16"
-
+                                tools:itemCount="3"
                                 tools:listitem="@layout/item_listview_bank_card" />
                         </LinearLayout>
 
