--- a/app/src/main/res/layout/online_pay_fragment.xml
+++ b/app/src/main/res/layout/online_pay_fragment.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cvEms="20"
+            app:cvTextColor="@color/color_9BB3D9_535D76"
             app:cvHint="@string/edt_hint_payer"
             app:cvInputType="text"
             app:cvTitle="@string/title_payer" />
@@ -34,6 +35,7 @@
             android:id="@+id/et_recharge_online_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cvTextColor="@color/color_9BB3D9_535D76"
             app:cvHint="@string/edt_hint_deposit_money"
             app:cvInputType="number"
             app:cvTitle="@string/title_deposit_money" />
