修复h5测试域名

--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -467,7 +467,8 @@
                     android:id="@+id/tv_affiliate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:maxWidth="80dp"
+                    android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/btm_navigation_affiliate"
                     android:textColor="@color/color_2b2b2b_ffffff"
@@ -483,7 +484,8 @@
                     android:id="@+id/tv_contact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:maxWidth="80dp"
+                    android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/contact"
                     android:textColor="@color/color_2b2b2b_ffffff"
@@ -499,7 +501,8 @@
                     android:id="@+id/tv_about_us"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:maxWidth="80dp"
+                    android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/about_us"
                     android:textColor="@color/color_2b2b2b_ffffff"
@@ -515,7 +518,8 @@
                     android:id="@+id/tv_responsible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:maxWidth="80dp"
+                    android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/responsible"
                     android:textColor="@color/color_2b2b2b_ffffff"
@@ -531,7 +535,8 @@
                     android:id="@+id/tv_terms"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:maxWidth="80dp"
+                    android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/terms_conditions"
                     android:textColor="@color/color_2b2b2b_ffffff"
@@ -547,7 +552,8 @@
                     android:id="@+id/tv_privacy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:maxWidth="80dp"
+                    android:layout_marginHorizontal="@dimen/margin_15"
                     android:layout_marginVertical="@dimen/margin_10"
                     android:text="@string/privacy_policy"
                     android:textColor="@color/color_2b2b2b_ffffff"
