--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -27,7 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginHorizontal="18dp"
-                tl:cardCornerRadius="10dp">
+                tl:cardCornerRadius="10dp"
+                tl:cardMaxElevation="2dp">
 
                 <com.youth.banner.Banner
                     android:id="@+id/banner"
@@ -91,26 +92,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_15"
-                android:layout_marginVertical="@dimen/margin_10">
+                android:layout_marginTop="@dimen/margin_10">
 
-                <androidx.core.widget.NestedScrollView
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/rv_type_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:overScrollMode="ifContentScrolls">
-
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/rv_type_list"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:orientation="horizontal"
-                        android:nestedScrollingEnabled="false" />
-                </androidx.core.widget.NestedScrollView>
+                    android:layout_height="210dp"
+                    android:orientation="horizontal"
+                    android:nestedScrollingEnabled="false" />
 
                 <include
                     android:id="@+id/lin_menu_game"
                     layout="@layout/view_home_menu_game"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/margin_15"
                     android:visibility="gone"
                     android:layout_marginTop="@dimen/margin_40" />
 
@@ -122,11 +118,14 @@
 
                     <RadioButton
                         android:id="@+id/rbtn_sport"
-                        android:layout_width="80dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="26dp"
+                        android:minWidth="80dp"
+                        android:layout_marginBottom="5dp"
                         android:gravity="center"
                         android:button="@null"
                         android:checked="true"
+                        android:elevation="2dp"
                         android:background="@drawable/selector_bg_home_tab_menu"
                         android:textColor="@color/selector_blue_white"
                         android:textSize="@dimen/textSize14sp"
@@ -134,9 +133,12 @@
 
                     <RadioButton
                         android:id="@+id/rbtn_egame"
-                        android:layout_width="80dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="26dp"
+                        android:minWidth="80dp"
                         android:layout_marginLeft="@dimen/margin_10"
+                        android:elevation="2dp"
+                        android:layout_marginBottom="5dp"
                         android:gravity="center"
                         android:button="@null"
                         android:background="@drawable/selector_bg_home_tab_menu"
@@ -151,7 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_15"
-                android:layout_marginVertical="8dp"
+                android:layout_marginTop="5dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 tools:ignore="SpUsage, ContentDescription">
@@ -189,18 +191,25 @@
                 android:id="@+id/lin_activity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:layout_marginHorizontal="@dimen/margin_10"
-                android:paddingLeft="60dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="8dp"
-                android:background="@drawable/img_active"
+                android:background="@drawable/img_bg_active"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp"
                 android:visibility="gone"
                 tools:visibility="visible">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/margin_10"
+                    android:src="@drawable/icon_active" />
 
                 <org.cxct.sportlottery.ui.common.UPMarqueeView
                     android:id="@+id/um_activity"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/margin_10"
                     android:layout_gravity="center_vertical" />
             </LinearLayout>
         </LinearLayout>
