--- a/app/src/main/res/layout/fragment_sport_list.xml
+++ b/app/src/main/res/layout/fragment_sport_list.xml
@@ -34,6 +34,7 @@
                     android:id="@+id/ll_sport_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:elevation="2dp"
                     android:background="@drawable/bg_white_radius_10_bottom"
                     android:gravity="center_horizontal"
                     tools:ignore="MissingConstraints">
@@ -51,6 +52,7 @@
                     android:id="@+id/lin_opt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:layout_marginTop="-10dp"
                     android:background="@color/color_E8F4FF"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
