--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -456,7 +456,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:fontFamily="@font/helvetica_bold"
+                            android:fontFamily="@font/din_font"
                             android:gravity="center"
                             android:textColor="@color/color_6C7BA8"
                             android:textSize="@dimen/textSize12sp"
