--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -368,7 +368,7 @@
     <color name="color_A5A9B3">#A5A9B3</color>
     <color name="color_B73A20">#B73A20</color>
     <color name="background">@color/color_F0F5FA</color>
-    <color name="color_A65B0A">#A65B0A</color>
+    <color name="color_A36200">#A36200</color>
     <color name="color_A7B2C4">#A7B2C4</color>
     <color name="color_E8F4FF">#E8F4FF</color>
     <color name="color_9CB9CF">#9CB9CF</color>
