OK-769 【OKBET-UI改版-Android-我的】資金明細-提款記錄詳情彈窗，狀態文字顏色不符設計 OK-763 OKBET-UI改版-Android-我的】資金明細-提款記錄不符設計稿

--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -131,6 +131,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:overScrollMode="never"
+                        tools:itemCount="3"
                         tools:listitem="@layout/view_item_recharge_log" />
                     <include
                         android:id="@+id/view_no_record"
