--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -79,6 +79,7 @@
         <attr name="sheetLayout" format="reference" />
         <attr name="defaultStatusText" format="string" />
         <attr name="textColor" format="reference|color" />
+        <attr name="listTextColor" format="reference|color" />
         <attr name="listWidth" format="dimension" />
         <attr name="listBackground" format="reference" />
         <attr name="defaultBottomSheetTitleText" format="string" />
