--- a/app/src/main/res/layout/dialog_withdraw_log_detail.xml
+++ b/app/src/main/res/layout/dialog_withdraw_log_detail.xml
@@ -40,7 +40,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:text="@string/log_detail_trans_num_sub"
-            android:textColor="@color/color_AEAEAE_404040"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider" />
@@ -49,7 +49,7 @@
             android:id="@+id/wd_log_detail_trans_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_trans_num_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_trans_num_subtitle"
@@ -62,7 +62,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:text="@string/log_detail_time_sub"
-            android:textColor="@color/color_AEAEAE_404040"
+            android:textColor="@color/color_FFFFFF_414655"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/wd_log_detail_trans_num_subtitle" />
 
@@ -70,7 +70,7 @@
             android:id="@+id/wd_log_detail_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_time_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_time_subtitle"
@@ -83,15 +83,15 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:text="@string/text_account_history_amount"
-            android:textColor="@color/color_AEAEAE_404040"
+            android:textColor="@color/color_FFFFFF_414655"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/wd_log_detail_time_subtitle" />
+            app:layout_constraintTop_toBottomOf="@id/detail_pay_type" />
 
         <TextView
             android:id="@+id/wd_log_detail_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:ellipsize="end"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_amount_subtitle"
@@ -105,7 +105,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:text="@string/log_detail_handle_fee"
-            android:textColor="@color/color_AEAEAE_404040"
+            android:textColor="@color/color_FFFFFF_414655"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/wd_log_detail_amount_subtitle" />
 
@@ -134,7 +134,7 @@
             android:id="@+id/wd_log_detail_commission"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_commission_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_commission_subtitle"
@@ -147,7 +147,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:text="@string/log_detail_status_sub"
-            android:textColor="@color/color_AEAEAE_404040"
+            android:textColor="@color/color_FFFFFF_414655"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/wd_log_detail_commission_subtitle" />
 
@@ -155,7 +155,7 @@
             android:id="@+id/wd_log_detail_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_1EB65B"
             android:textSize="@dimen/textSize14sp"
             android:ellipsize="end"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_status_subtitle"
@@ -163,6 +163,7 @@
             tools:text="处理中" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/wd_log_detail_review_time_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -174,6 +175,7 @@
             app:layout_constraintTop_toBottomOf="@id/wd_log_detail_status_subtitle" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/wd_log_detail_review_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -182,8 +184,37 @@
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_review_time_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_review_time_subtitle"
             tools:text="2020-12-12 19:58:22" />
+        <TextView
+            android:id="@+id/detail_pay_type_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:gravity="end"
+            android:text="@string/transact_type"
+            android:textColor="@color/color_FFFFFF_414655"
+            android:textSize="@dimen/textSize14sp"
+            app:layout_constraintEnd_toStartOf="@+id/wd_log_detail_reason"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/wd_log_detail_time_subtitle" />
 
         <TextView
+            android:id="@+id/detail_pay_type"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:textColor="@color/color_FFFFFF_414655"
+            android:textSize="@dimen/textSize14sp"
+            app:layout_constraintBottom_toTopOf="@id/log_detail_divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/detail_pay_type_subtitle"
+            app:layout_constraintTop_toTopOf="@+id/detail_pay_type_subtitle"
+            app:layout_constraintVertical_bias="0"
+            tools:text="GCash" />
+
+        <TextView
+            android:visibility="gone"
             android:id="@+id/wd_log_detail_reason_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -198,6 +229,7 @@
             app:layout_constraintTop_toBottomOf="@id/wd_log_detail_review_time_subtitle" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/wd_log_detail_reason"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
